# rag-diary

./: .env.dist  .gitignore  LICENSE  README.md  diary.sh  pyproject.toml
notebooks/: chromadb_test.ipynb  generate_db_examples.ipynb  langchain_prompting_test.ipynb  langchain_retrival.ipynb  organ_trail.ipynb
notebooks/.ipynb_checkpoints/: langchain_retrival-checkpoint.ipynb
prompts/: agent_langchain_basic__llm_chain.prompt.txt  prompt_config.json
rag_diary/: __init__.py  __main__.py  agent.py  agent_langchain_basic.py  boot.py  chat_agent.py  cli.py  config.py  controller.py  embedding.py  entry.py  types.py  utils.py  vector_store_chromadb.py  vectore_store.py  vectore_store_chromadb.py
