[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rag_diary"
authors = [{name = "tbush01@gmail.com", email = "tbush01@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pydantic>=2.5.3",
    "pandas>=2.2.0",
    "openai>=1.8.0",
    "pydantic>=2.5.3",
    "llama-index==0.9.34",
    "pyspark>=3.5.0",
    "click>=8.1.7",
    "pydantic-settings>=2.1.0",
    "pyarrow>=14.0.2",
    "fastparquet>=2023.10.1",
    "jupyter>=1.0.0 ",
    "chromadb>=0.4.22",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.1",
    "langchain-experimental>=0.0.49",
    "sentence-transformers>=2.2.2",
    "pypdf>=4.0.1",
    "cryptography>=3.1"
]
